--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">teaApp</string>
     <string name="action_settings">Settings</string>
+    <string name="self_destruct">Pam is cute</string>
 </resources>
